# chess-analytics

./: .gitignore  eslint.config.js  nohup.out  package-lock.json  package.json  pyproject.toml
app/: __init__.py  crud.py  database.py  main.py  models.py  schemas.py
app/static/: app.js  index.html  style.css
db/: schema.sql
documentation/: Milestone2.md  constraints.md  er_diagram.md  final_report.docx  final_report.md  schema.md
etl/: fetch_accuracies.py  load_db.py  parse_pgn.py  sync_player.py
test_move/: pyproject.toml
test_move/app/: models.py  schemas.py
test_move/app/static/: app.js  style.css
test_move/etl/: fetch_accuracies.py  sync_player.py
