[project]
name = "finalproject"
version = "0.1.0"
description = "Chess analytics web application — D532 Final Project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.5",
    "notebook>=7.5.4",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "python-chess>=1.999",
    "sqlalchemy>=2.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "requests>=2.32",
    "httpx>=0.27",
]
